--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "app.js",
   "scripts": {
-    "start": "./nodebb upgrade && ./nodebb dev",
+    "start": "sudo ./nodebb upgrade && ./nodebb dev",
     "lint": "eslint --cache ./nodebb .",
     "pretest": "npm run lint",
     "test": "istanbul cover node_modules/mocha/bin/_mocha -- -R dot",
